--- a/app/sass/styles.scss
+++ b/app/sass/styles.scss
@@ -19,6 +19,10 @@ $color-complementario: #546E7A;
 @import "compass/reset";
 @import url('https://fonts.googleapis.com/css?family=Ubuntu:300,400,700');
 
+html{
+  background-color: $color-principal;
+}
+
 body {
 font-family: 'Ubuntu', sans-serif}
 
@@ -36,11 +40,12 @@ font-family: 'Ubuntu', sans-serif}
 }
 
 .mi-pedido-no-pedido {
-  background-color: #DfDfDf !important;
+  background-color: $color-complementario!important;
+  color: white;
 }
 
 .mi-pedido-pedido {
-  background-color: #FFFFFF;
+  background-color: lightcoral;
   display: flex;
   flex-direction: column;
 }
@@ -67,7 +72,7 @@ font-family: 'Ubuntu', sans-serif}
 
 .mi-pedido-top-left,
 .mi-pedido-extra-left {
-  flex: 3;
+  flex: 1;
   margin: 5px;
 }
 
@@ -253,12 +258,16 @@ font-family: 'Ubuntu', sans-serif}
 
 .productos-insite-producto-comentario{
   display: flex;
-  margin: 5px auto;
-  width: 97%;
-  background: #D8D8D8;
-  border: 1px solid #979797;
-  box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.50);
-  border-radius: 8px;
+  width: 85%;
+  background: white;
+  border-radius: 2px;
+  padding: 12px;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 16px;
+  margin: 10px auto;
+  border-style: none;
+
+
 
 }
 
@@ -273,6 +282,9 @@ font-family: 'Ubuntu', sans-serif}
 .botonera{
   text-align: center;
   margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
+  padding: 7px;
   margin-bottom: 10px;
 }
 
@@ -350,7 +362,7 @@ font-family: 'Ubuntu', sans-serif}
 }
 
 .input input{
-  width: 100%;
+  width: 97%;
   font-size: 18px!important;
   color: black!important;
   height: 30px;
@@ -392,3 +404,10 @@ font-family: 'Ubuntu', sans-serif}
    }
  }
 
+mv-mi-pedido{
+  .lista{
+    background-color: #EDEDED;
+
+  }
+
+}
