--- a/app/stylesheets/styles.css
+++ b/app/stylesheets/styles.css
@@ -65,11 +65,174 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 }
 
 /* line 22, ../sass/styles.scss */
+html {
+  background-color: #00ACC1;
+}
+
+/* line 26, ../sass/styles.scss */
 body {
   font-family: 'Ubuntu', sans-serif;
 }
 
-/* line 25, ../sass/styles.scss */
+/* line 31, ../sass/styles.scss */
+.animated {
+  -webkit-animation-fill-mode: both;
+  -moz-animation-fill-mode: both;
+  -ms-animation-fill-mode: both;
+  -o-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-duration: .8s;
+  -moz-animation-duration: .8s;
+  -ms-animation-duration: .8s;
+  -o-animation-duration: .8s;
+  animation-duration: .8s;
+}
+
+@-webkit-keyframes FadeInTop {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@-moz-keyframes FadeInTop {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@-o-keyframes FadeInTop {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@keyframes FadeInTop {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+/* line 89, ../sass/styles.scss */
+.FadeInTop {
+  -webkit-animation-name: FadeInTop;
+  -moz-animation-name: FadeInTop;
+  -o-animation-name: FadeInTop;
+  animation-name: FadeInTop;
+}
+
+@-webkit-keyframes FadeInTop2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-1%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@-moz-keyframes FadeInTop2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-1%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@-o-keyframes FadeInTop2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-1%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@keyframes FadeInTop2 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateY(-1%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+/* line 144, ../sass/styles.scss */
+.FadeInTop2 {
+  -webkit-animation-name: FadeInTop2;
+  -moz-animation-name: FadeInTop2;
+  -o-animation-name: FadeInTop2;
+  animation-name: FadeInTop2;
+}
+
+@-webkit-keyframes FadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+@-moz-keyframes FadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+@-o-keyframes FadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+@keyframes FadeInLeft {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(100%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+  }
+}
+/* line 196, ../sass/styles.scss */
+.FadeInLeft {
+  -webkit-animation-name: FadeInLeft;
+  -moz-animation-name: FadeInLeft;
+  -o-animation-name: FadeInTop2;
+  animation-name: FadeInLeft;
+}
+
+/* line 207, ../sass/styles.scss */
 .form-abm {
   position: fixed;
   width: 100%;
@@ -79,30 +242,31 @@ body {
   background-color: #EEEEEE;
 }
 
-/* line 34, ../sass/styles.scss */
+/* line 216, ../sass/styles.scss */
 .form-open {
   right: 0 !important;
 }
 
-/* line 38, ../sass/styles.scss */
+/* line 220, ../sass/styles.scss */
 .mi-pedido-no-pedido {
-  background-color: #DfDfDf !important;
+  background-color: #546E7A !important;
+  color: white;
 }
 
-/* line 42, ../sass/styles.scss */
+/* line 225, ../sass/styles.scss */
 .mi-pedido-pedido {
-  background-color: #FFFFFF;
+  background-color: lightcoral;
   display: flex;
   flex-direction: column;
 }
 
-/* line 48, ../sass/styles.scss */
+/* line 231, ../sass/styles.scss */
 .mi-pedido-top {
   display: flex;
   flex-direction: row;
 }
 
-/* line 54, ../sass/styles.scss */
+/* line 237, ../sass/styles.scss */
 .mi-pedido-extra {
   background-color: #D5D5D5;
   display: flex;
@@ -110,7 +274,7 @@ body {
   padding: 10px;
 }
 
-/* line 61, ../sass/styles.scss */
+/* line 244, ../sass/styles.scss */
 .mi-pedido-eliminar {
   height: 20px;
   width: 20px;
@@ -118,21 +282,21 @@ body {
   padding: 5px;
 }
 
-/* line 68, ../sass/styles.scss */
+/* line 251, ../sass/styles.scss */
 .mi-pedido-top-left,
 .mi-pedido-extra-left {
-  flex: 3;
+  flex: 1;
   margin: 5px;
 }
 
-/* line 74, ../sass/styles.scss */
+/* line 257, ../sass/styles.scss */
 .mi-pedido-top-right,
 .mi-pedido-extra-right {
   flex: 1;
   margin: 5px;
 }
 
-/* line 80, ../sass/styles.scss */
+/* line 263, ../sass/styles.scss */
 .nav {
   display: flex;
   flex-direction: row;
@@ -146,22 +310,22 @@ body {
   height: 30px;
   padding: 5px;
 }
-/* line 92, ../sass/styles.scss */
+/* line 275, ../sass/styles.scss */
 .nav img {
   height: 30px;
   width: 30px;
 }
-/* line 96, ../sass/styles.scss */
+/* line 279, ../sass/styles.scss */
 .nav .separator {
   flex: 8;
 }
 
-/* line 101, ../sass/styles.scss */
+/* line 284, ../sass/styles.scss */
 .view-container {
   margin-top: 40px;
 }
 
-/* line 105, ../sass/styles.scss */
+/* line 288, ../sass/styles.scss */
 .mi-pedido-titulo {
   width: calc(100% - 20px);
   background-color: #00ACC1;
@@ -170,15 +334,23 @@ body {
   display: inherit;
   padding: 10px;
   font-size: 7vw;
+  -webkit-animation: FadeInTop2 ease-in 1;
+  -moz-animation: FadeInTop2 ease-in 1;
+  animation: FadeInTop2 ease-in 1;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: .3s;
+  -moz-animation-duration: .3s;
+  animation-duration: .3s;
 }
 @media (min-width: 600px) {
-  /* line 105, ../sass/styles.scss */
+  /* line 288, ../sass/styles.scss */
   .mi-pedido-titulo {
     font-size: 4vw;
   }
 }
 
-/* line 120, ../sass/styles.scss */
+/* line 311, ../sass/styles.scss */
 .productos-insite-categoria-titulo,
 .productos-insite-producto-guar-titulo {
   width: calc(100% - 20px);
@@ -188,16 +360,24 @@ body {
   font-family: 'Ubuntu', sans-serif;
   font-size: 7vw;
   color: white;
+  -webkit-animation: FadeInTop2 ease-in 1;
+  -moz-animation: FadeInTop2 ease-in 1;
+  animation: FadeInTop2 ease-in 1;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: .3s;
+  -moz-animation-duration: .3s;
+  animation-duration: .3s;
 }
 @media (min-width: 600px) {
-  /* line 120, ../sass/styles.scss */
+  /* line 311, ../sass/styles.scss */
   .productos-insite-categoria-titulo,
   .productos-insite-producto-guar-titulo {
     font-size: 4vw;
   }
 }
 
-/* line 136, ../sass/styles.scss */
+/* line 335, ../sass/styles.scss */
 .productos-insite-categoria-imagen {
   padding: 10px;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a1b2b4+0,a1b2b4+100&1+0,0.3+100 */
@@ -210,28 +390,28 @@ body {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1b2b4', endColorstr='#4da1b2b4',GradientType=0 );
   /* IE6-9 */
 }
-/* line 147, ../sass/styles.scss */
+/* line 346, ../sass/styles.scss */
 .productos-insite-categoria-imagen svg {
   display: flex;
   width: 100% !important;
   height: 100%;
 }
 
-/* line 154, ../sass/styles.scss */
+/* line 353, ../sass/styles.scss */
 .productos-list h1 {
   Padding: 10px;
   font-family: 'Ubuntu', sans-serif;
   font-size: 22px;
 }
 
-/* line 160, ../sass/styles.scss */
+/* line 359, ../sass/styles.scss */
 .buscador-container {
   width: 100%;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
 }
-/* line 165, ../sass/styles.scss */
+/* line 364, ../sass/styles.scss */
 .buscador-container .input {
   display: flex;
   width: 99%;
@@ -241,7 +421,7 @@ body {
   font-family: 'Ubuntu', sans-serif;
 }
 
-/* line 175, ../sass/styles.scss */
+/* line 374, ../sass/styles.scss */
 .productos-insite-producto,
 .productos-insite-producto-guarnicion {
   display: flex;
@@ -250,19 +430,19 @@ body {
   font-size: 17px;
   padding: 8px;
 }
-/* line 183, ../sass/styles.scss */
+/* line 382, ../sass/styles.scss */
 .productos-insite-producto span:nth-child(1),
 .productos-insite-producto-guarnicion span:nth-child(1) {
   flex: 8;
 }
-/* line 186, ../sass/styles.scss */
+/* line 385, ../sass/styles.scss */
 .productos-insite-producto span,
 .productos-insite-producto-guarnicion span {
   padding: 5px;
 }
 
 @media (min-width: 600px) {
-  /* line 193, ../sass/styles.scss */
+  /* line 392, ../sass/styles.scss */
   .productos-insite-producto:hover, .productos-insite-producto-guarnicion:hover {
     cursor: pointer;
     background-color: #76986A !important;
@@ -274,14 +454,14 @@ body {
   }
 }
 
-/* line 207, ../sass/styles.scss */
+/* line 406, ../sass/styles.scss */
 .productos-insite-detalle {
   margin-top: 40px;
   display: flex;
   flex-direction: column;
 }
 
-/* line 213, ../sass/styles.scss */
+/* line 412, ../sass/styles.scss */
 .productos-insite-producto {
   font-family: 'Ubuntu', sans-serif;
   font-size: 16px;
@@ -289,7 +469,7 @@ body {
   background-color: #EDEDED;
 }
 
-/* line 220, ../sass/styles.scss */
+/* line 419, ../sass/styles.scss */
 .productos-insite-producto-top {
   display: flex;
   flex-direction: row;
@@ -300,18 +480,18 @@ body {
   color: #000000;
 }
 
-/* line 229, ../sass/styles.scss */
+/* line 428, ../sass/styles.scss */
 .productos-insite-producto-titulo {
   font-weight: bold;
 }
 
-/* line 232, ../sass/styles.scss */
+/* line 431, ../sass/styles.scss */
 .productos-insite-producto-precio {
   font-weight: bold;
   color: black;
 }
 
-/* line 237, ../sass/styles.scss */
+/* line 436, ../sass/styles.scss */
 .productos-insite-producto-add-remove {
   display: flex;
   flex-direction: row;
@@ -322,25 +502,28 @@ body {
   font-family: 'Ubuntu', sans-serif;
   align-items: center;
 }
-/* line 246, ../sass/styles.scss */
+/* line 445, ../sass/styles.scss */
 .productos-insite-producto-add-remove button {
   border-style: none;
   background: none;
   padding-top: 5px;
 }
 
-/* line 254, ../sass/styles.scss */
+/* line 453, ../sass/styles.scss */
 .productos-insite-producto-comentario {
+  max-height: 30px;
   display: flex;
-  margin: 5px auto;
-  width: 97%;
-  background: #D8D8D8;
-  border: 1px solid #979797;
-  box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
+  width: 93%;
+  background: white;
+  border-radius: 2px;
+  padding: 12px;
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 16px;
+  margin: 10px auto;
+  border-style: none;
 }
 
-/* line 265, ../sass/styles.scss */
+/* line 469, ../sass/styles.scss */
 .productos-insite-producto-description {
   padding-left: 10px;
   color: black;
@@ -349,14 +532,28 @@ body {
   line-height: 22px;
 }
 
-/* line 273, ../sass/styles.scss */
+/* line 477, ../sass/styles.scss */
 .botonera {
   text-align: center;
   margin-top: 10px;
+  display: flex;
+  justify-content: space-around;
+  padding: 7px;
   margin-bottom: 10px;
 }
+/* line 484, ../sass/styles.scss */
+.botonera svg {
+  -webkit-animation: FadeInTop2 ease-in 1;
+  -moz-animation: FadeInTop2 ease-in 1;
+  animation: FadeInTop2 ease-in 1;
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: .3s;
+  -moz-animation-duration: .3s;
+  animation-duration: .3s;
+}
 
-/* line 279, ../sass/styles.scss */
+/* line 496, ../sass/styles.scss */
 .boton-agregar, .boton-cancelar, .boton-ok, .boton-eliminar, .boton-calendario {
   position: relative;
   height: 37px;
@@ -374,7 +571,7 @@ body {
   transition: all .4s ease-in-out;
 }
 
-/* line 295, ../sass/styles.scss */
+/* line 512, ../sass/styles.scss */
 .btn-agregar, .btn-cancelar, .btn-ok, .btn-eliminar, .btn-calendario {
   position: relative;
   color: #fff;
@@ -393,37 +590,37 @@ body {
   transition: all .4s ease-in-out;
 }
 
-/* line 313, ../sass/styles.scss */
+/* line 530, ../sass/styles.scss */
 .boton-cancelar, .btn-cancelar {
   background-color: #ED7161 !important;
 }
 
-/* line 316, ../sass/styles.scss */
+/* line 533, ../sass/styles.scss */
 .boton-agregar, .btn-agregar {
   background-color: #293333;
 }
 
-/* line 319, ../sass/styles.scss */
+/* line 536, ../sass/styles.scss */
 .boton-ok, .btn-ok {
   background-color: #00CE5D;
 }
 
-/* line 322, ../sass/styles.scss */
+/* line 539, ../sass/styles.scss */
 .boton-eliminar, .btn-eliminar {
   background-color: sandybrown;
 }
 
-/* line 325, ../sass/styles.scss */
+/* line 542, ../sass/styles.scss */
 .boton-calendario, .btn-calendario {
   background-color: #447EAF;
 }
 
-/* line 329, ../sass/styles.scss */
+/* line 546, ../sass/styles.scss */
 .fa {
   color: white;
 }
 
-/* line 333, ../sass/styles.scss */
+/* line 550, ../sass/styles.scss */
 .boton-agregar:hover, .boton-cancelar:hover, .boton-ok:hover, .boton-eliminar:hover, .boton-calendario:hover,
 .btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover {
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
@@ -440,7 +637,7 @@ body {
   transition: all .4s ease-in-out;
 }
 
-/* line 346, ../sass/styles.scss */
+/* line 563, ../sass/styles.scss */
 .btn-agregar:hover, .btn-cancelar:hover, .btn-ok:hover, .btn-eliminar:hover, .btn-calendario:hover {
   -ms-transform: scale(1, 1);
   /* IE 9 */
@@ -449,9 +646,9 @@ body {
   transform: scale(1, 1);
 }
 
-/* line 352, ../sass/styles.scss */
+/* line 569, ../sass/styles.scss */
 .input input {
-  width: 100%;
+  width: 97%;
   font-size: 18px !important;
   color: black !important;
   height: 30px;
@@ -459,7 +656,7 @@ body {
   padding: 5px;
 }
 
-/* line 362, ../sass/styles.scss */
+/* line 579, ../sass/styles.scss */
 .total-mi-pedido {
   margin: 4px auto;
   font-size: 28px;
@@ -467,30 +664,157 @@ body {
   padding-right: 10px;
 }
 
-/* line 372, ../sass/styles.scss */
+/* line 589, ../sass/styles.scss */
 .plato-sin-confirmar {
   border-top: 5px solid darkred !important;
 }
 
-/* line 374, ../sass/styles.scss */
+/* line 591, ../sass/styles.scss */
 .plato-confirmado {
   border-top: 5px solid yellow !important;
 }
 
-/* line 377, ../sass/styles.scss */
+/* line 594, ../sass/styles.scss */
 .plato-servido {
   border-top: 5px #79996D solid !important;
 }
 
-/* line 382, ../sass/styles.scss */
+/* line 599, ../sass/styles.scss */
 .contenedor-mesero-plugin mv-productos-insite {
   flex: 3;
 }
 
 @media (max-width: 600px) {
-  /* line 388, ../sass/styles.scss */
+  /* line 605, ../sass/styles.scss */
   .contenedor-mesero-plugin mv-mi-pedido {
     display: none;
     visibility: hidden;
   }
+}
+
+/* line 613, ../sass/styles.scss */
+mv-mi-pedido .lista {
+  background-color: #EDEDED;
+}
+
+/* line 622, ../sass/styles.scss */
+.mv-mensaje-custom-show {
+  position: fixed;
+  height: 50px;
+  width: 500px;
+  z-index: 1200;
+  top: 50%;
+  left: calc(50% - 250px);
+  vertical-align: middle;
+}
+/* line 631, ../sass/styles.scss */
+.mv-mensaje-custom-show i {
+  vertical-align: middle;
+  padding: 10px 10px 10px 0;
+}
+/* line 635, ../sass/styles.scss */
+.mv-mensaje-custom-show i.exit-button {
+  float: right;
+  vertical-align: middle;
+  opacity: .4;
+  padding: 10px 0 10px 10px;
+}
+/* line 640, ../sass/styles.scss */
+.mv-mensaje-custom-show i.exit-button:hover {
+  opacity: .8;
+  cursor: pointer;
+}
+/* line 646, ../sass/styles.scss */
+.mv-mensaje-custom-show i.ico-info {
+  color: rgba(255, 255, 255, 0.5) !important;
+}
+/* line 649, ../sass/styles.scss */
+.mv-mensaje-custom-show i.ico-warn {
+  color: rgba(255, 255, 255, 0.5) !important;
+}
+/* line 652, ../sass/styles.scss */
+.mv-mensaje-custom-show i.ico-success {
+  color: rgba(255, 255, 255, 0.5) !important;
+}
+/* line 655, ../sass/styles.scss */
+.mv-mensaje-custom-show i.ico-error {
+  color: rgba(255, 255, 255, 0.5) !important;
+}
+
+/* line 671, ../sass/styles.scss */
+.mv-error-message, .mv-success-message, .mv-info-message, .mv-warning-message {
+  font-family: 'Ubuntu', sans-serif;
+  padding: 20px;
+  width: 250px !important;
+  font-size: 16px;
+  line-height: 26px;
+  z-index: 1500;
+  margin-left: 100px;
+  text-align: center;
+  display: flex;
+  -webkit-border-radius: 2px;
+  -webkit-box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.25);
+}
+
+/* line 687, ../sass/styles.scss */
+.mv-error-message {
+  background-color: #F44336;
+  color: white !important;
+}
+
+/* line 692, ../sass/styles.scss */
+.mv-success-message {
+  background-color: #CDDC39;
+  color: white;
+}
+
+/* line 697, ../sass/styles.scss */
+.mv-info-message {
+  background-color: #447EAF;
+  color: white !important;
+}
+
+/* line 702, ../sass/styles.scss */
+.mv-warning-message {
+  background-color: #96722E;
+  color: white !important;
+}
+
+/* line 707, ../sass/styles.scss */
+.error-message {
+  display: flex;
+  position: absolute;
+  top: 16px !important;
+  left: -1px !important;
+  text-align: center;
+  height: 200px;
+  margin: auto;
+  font-size: 14px;
+  padding: 30px;
+  -webkit-border-radius: 2px;
+  opacity: 0;
+  /* make things invisible upon start */
+  -webkit-animation: fadeIn ease-in-out 1;
+  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+  -moz-animation: fadeIn ease-in-out 1;
+  animation: fadeIn ease-in-out 1;
+  -webkit-animation-fill-mode: forwards;
+  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+  -moz-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-duration: 1s;
+  -moz-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+/* line 736, ../sass/styles.scss */
+button:focus {
+  outline-style: none !important;
+}
+
+/* line 738, ../sass/styles.scss */
+.row-warning {
+  color: gold;
 }
